<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/handle_acc_in_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:contentDescription="@string/drag_handle"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:scaleType="fitStart"
        android:tint="?attr/colorControlNormal"
        app:srcCompat="@drawable/ic_drag_handle_black_24dp" />

    <TextView
        android:id="@+id/textAccInEditList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/app_name"
        android:textAlignment="viewStart"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/buttonEditAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:contentDescription="@string/edit"
        android:src="@drawable/ic_mode_edit_black_24dp"
        android:tint="?attr/colorControlNormal" />

    <ImageButton
        android:id="@+id/buttonDeleteAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:contentDescription="@string/delete"
        android:tint="?attr/colorControlNormal"
        app:srcCompat="@drawable/ic_delete_forever_black_24dp" />

</LinearLayout>